--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,20 +1,18 @@
-<%# navigation styled for Bootstrap 3.0 %>
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+<div>
+    <div class="header-logo">
+        <%= link_to root_path, :class => 'header-logo-img-cont' do %>
+          <%= image_tag("animenz.png", :class=> 'header-logo-img', :alt => 'Animenz Logo') %>
+        <% end %>
     </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <%= render 'layouts/navigation_links' %>
+</div>
+<div class="nav-bar-cont font-bold clearfix">
+    <ul class="nav-bar float-left nav-breadcumb">
+        <li><a href="/">成都场</a></li>
+        <li><a href="/">选择区域</a></li>
+        <li>一楼一区</li>
+    </ul>
+    <ul class="nav-bar float-right pos-relative nav-bar-profile-menu-cont">
+        <%# render 'layouts/navigation_links' %>
         <%= render 'layouts/nav_links_for_auth' %>
-      </ul>
-    </div>
-  </div>
-</nav>
+    </ul>
+</div>
