--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,23 +1,15 @@
-<div class="authform">
-  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :role => 'form'}) do |f| %>
-    <h3>Sign up</h3>
-    <%= devise_error_messages! %>
-    <div class="form-group">
-      <%= f.label :name %>
-      <%= f.text_field :name, :autofocus => true, class: 'form-control' %>
-    </div>
-    <div class="form-group">
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
-    </div>
-    <div class="form-group">
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
-    </div>
-    <div class="form-group">
-      <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
-    </div>
-     <%= f.submit 'Sign up', :class => 'button right' %>
-  <% end %>
-</div>
+<h2>注册</h2>
+<hr />
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :role => 'form', :class => 'form-login' }) do |f| %>
+  <%= devise_error_messages! %>
+  <div class="form-group">
+    <%= f.text_field :name, :autofocus => true, :placeholder => '用户名' %>
+    <%= f.email_field :email, :placeholder => '邮箱' %>
+    <%= f.password_field :password, :placeholder => '密码' %>
+    <%= f.password_field :password_confirmation, :placeholder => '确认密码' %>
+  </div>
+  <div class="form-group">
+    <%= f.submit '注册', :class => 'button' %>
+  </div>
+  <%= link_to '登录', new_user_session_path %>
+<% end %>
