--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,7 @@
 <!-- Footer -->
-<div class="container">
-  <hr>
-  <footer>
-      <div class="row">
-          <div class="col-lg-12">
-              <p>Copyright &copy; Your Website 2014</p>
-          </div>
-      </div>
-  </footer>
-</div>
+<footer>
+	<div class="footer">
+		蜀ICP备16047394号-1
+	</div>
+</footer>
 <!-- /.container -->
