--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -1,3 +1,80 @@
-// Place all the styles related to the orders controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+@import 'mqp';
+@import 'cd';
+
+ul.order-list {
+    list-style: none;
+    margin: 1em 0;
+    padding: 1em;
+    background-color: #181818;
+    border-radius: 6px;
+    @include mq($until: tablet) {
+        padding: 1em 0;
+        border-radius: 0;
+    }
+    & > li.order {
+        margin-bottom: 1em;
+        .order-bar-table {
+            text-shadow: 0px 1px 1px black;
+            border: 2px solid #999;
+            width: 100%;
+            border-collapse: separate;
+            table-layout: fixed;
+            
+            tr:first-child > td { padding-top: 0.3em; }
+            tr:last-child > td { padding-bottom: 0.3em; }
+            &.order-header {
+                border-radius: 4px 4px 0 0;
+                background-image: linear-gradient(180deg, #505057 0%, #313136 100%);
+                box-shadow: 1px 1px 2px $lighter-20 inset;
+            }
+            &.order-footer {
+                border-radius: 0 0 4px 4px;
+                background-image: linear-gradient(176deg, #505057 0%, #313136 100%);
+                box-shadow: -1px -1px 2px $darken-30 inset, 1px 2px 1em $darken-30;
+            }
+            .order-bar-info-status {
+                font-size: large; }
+            .order-bar-info-id {
+                color: #aaa;
+            }
+            .order-bar-detail-button {
+                border-radius: 2px;
+                padding: 0.15em 0.4em;
+                background-color: #323236;
+                background: linear-gradient(to bottom, #404144 0%, #303236 100%);
+                border: 1px solid #45474a;
+                color: #aaa;
+                box-shadow: 0 0 3px #111, 1px 1px 1px #555 inset;
+            }
+            @include mq($until: tablet) {
+                border: none; }
+        }
+        
+        .order-item-table {
+            border: 2px solid #aaa;
+            background-color: #ccc;
+            box-shadow: 1px 2px 3px $darken-30 inset;
+            color: #666;
+            width: 100%;
+            margin: -2px 0;
+            
+            @include mq($until: tablet) {
+                border: none;
+                margin: 0;
+            }
+            & .order-item {
+                & + .order-item {
+                    border-top: 1px dotted #999; }
+                td { padding: 1em; }
+            }
+        }
+        @include mq($from: tablet) {
+            &:hover {
+                .order-bar, .order-bar-table { border: 2px solid #ddd; }
+                .order-item-table { border: 2px solid #ddd; }
+            }
+        }
+        
+    }
+}
