--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,14 @@
-<div class="authform">
-  <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, :role => 'form'}) do |f| %>
-    <h3>Forgot your password?</h3>
-    <p>We'll send password reset instructions.</p>
+<br />
+<div class="dark-panel">
+  <h2>忘记密码</h2>
+  <hr />
+  <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, :role => 'form', :class => 'form-login'}) do |f| %>
+    <p>我们会把重置密码的方式以邮件的形式发送给你。</p>
     <%= devise_error_messages! %>
     <div class="form-group">
-      <%= f.label :email %>
-      <%= f.email_field :email, :autofocus => true, class: 'form-control' %>
+      <%= f.label :email, '请输入你的电子邮件：' %>
+      <%= f.email_field :email, :autofocus => true, class: 'form-control', placeholder: 'Email' %>
     </div>
-     <%= f.submit 'Reset Password', :class => 'button right' %>
+     <%= f.submit '重置密码', :class => 'button' %>
   <% end %>
 </div>
