--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,18 +1,13 @@
 <div>
-    <div class="header-logo">
-        <%= link_to root_path, :class => 'header-logo-img-cont' do %>
-          <%= image_tag("animenz.png", :class=> 'header-logo-img', :alt => 'Animenz Logo') %>
-        <% end %>
-    </div>
+	<div class="header-logo">
+		<%= link_to root_path, :class => 'header-logo-img-cont' do %>
+		  <%= image_tag("animenz.png", :class=> 'header-logo-img', :alt => 'Animenz Logo') %>
+		<% end %>
+	</div>
 </div>
 <div class="nav-bar-cont font-bold clearfix">
-    <ul class="nav-bar float-left nav-breadcumb">
-        <li><a href="/">成都场</a></li>
-        <li><a href="/">选择区域</a></li>
-        <li>一楼一区</li>
-    </ul>
-    <ul class="nav-bar float-right pos-relative nav-bar-profile-menu-cont">
-        <%# render 'layouts/navigation_links' %>
-        <%= render 'layouts/nav_links_for_auth' %>
-    </ul>
+	<%= yield(:breadcumb)  %>
+	<ul class="nav-bar float-right pos-relative nav-bar-profile-menu-cont">
+		<%= render 'layouts/nav_links_for_auth' %>
+	</ul>
 </div>
