--- a/app/assets/stylesheets/area.scss
+++ b/app/assets/stylesheets/area.scss
@@ -46,7 +46,8 @@
             max-height: 720px;
             padding: 3px;
             img {
-                max-width: 100%;
+                // max-width: 100%;
+                width: 100%;
                 border: 2px solid black;
                 border-radius: 3px;
                 box-shadow: 0 0 5px $lighter-50 inset, 0 0 0px 3px #FC0,
