--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -50,7 +50,7 @@
 
 <% content_for :breadcumb do %>
 <ul class="nav-bar float-left nav-breadcumb">
-    <li><% link_to '首页', '/' %></li>
+    <li><%= link_to '首页', '/' %></li>
     <li>用户信息</li>
 </ul>
 <% end %>
