--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,7 @@
 
 <% content_for :breadcumb do %>
 <ul class="nav-bar float-left nav-breadcumb">
-    <li><% link_to '首页', '/' %></li>
+    <li><%= link_to '首页', '/' %></li>
     <li>注册</li>
 </ul>
 <% end %>
