--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,7 +6,15 @@
 	</div>
 </div>
 <div class="nav-bar-cont font-bold clearfix">
-	<%= yield(:breadcumb)  %>
+	<% if content_for?(:breadcumb) %>
+		<%= yield :breadcumb %>
+	<% else %>
+		<ul class="nav-bar float-left nav-breadcumb">
+			<li><a href="/">成都场</a></li>
+			<li><a href="/">选择区域</a></li>
+			<li>????</li>
+		</ul>
+	<% end %>
 	<ul class="nav-bar float-right pos-relative nav-bar-profile-menu-cont">
 		<%= render 'layouts/nav_links_for_auth' %>
 	</ul>
