--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -20,9 +20,10 @@
         </dl>
         <hr class="hr-recital" />
         <div class="recital-button-cont">
-            <a href="#" class="btn-buy-buy-buy align-center">
+<!--             <a href="#" class="btn-buy-buy-buy align-center">
                 立即购买
-            </a>
+            </a> -->
+            <%= link_to '查看座位图', recital_areas_path(@recital), :class => 'btn-buy-buy-buy align-center' %>
         </div>
     </div>
 </div>
@@ -33,3 +34,10 @@
     Onda/昂达 V820w 双系统 WIFI 32GB 8寸 WIN8 WIN10平板电脑
     再降50元 还抢20点券 截至目前爆售 三万台
 </div>
+
+<% content_for :breadcumb do %>
+<ul class="nav-bar float-left nav-breadcumb">
+    <li><%= link_to '首页', '/' %></li>
+    <li>成都场</li>
+</ul>
+<% end %>
