--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -4,7 +4,7 @@
             <table class="order-header order-bar-table">
                 <tr>
                     <td>下单日期</td>
-                    <td rowspan="2"  class="order-bar-info-status"><strong>已完成</strong></td>
+                    <td rowspan="2"  class="order-bar-info-status"><strong><%= order.get_status %></strong></td>
                     <td>总金额</td>
                 </tr>
                 <tr>
@@ -13,14 +13,12 @@
                 </tr>
             </table>
             <table class="order-item-table">
+                <% order.seats.each do |seat| %>
                 <tr class="order-item">
-                    <td>成都站 一楼一区</td>
-                    <td>单价 ￥250</td>
+                    <td><%= seat.area.recital.city %>站 <%= seat.area.name %></td>
+                    <td>单价 ￥<%= seat.area.price %></td>
                 </tr>
-                <tr class="order-item">
-                    <td>成都站 一楼一区</td>
-                    <td>单价 ￥250</td>
-                </tr>
+                <% end %>
             </table>
             <table class="order-footer order-bar-table">
                 <tr>
@@ -30,7 +28,7 @@
                         </span>
                     </td>
                     <td>
-                        <%= link_to user_order_path(current_user, order) do %>
+                        <%= link_to order_path(order) do %>
                             <button class="button order-bar-detail-button">查看详情</button>
                         <% end %>
                     </td>
@@ -46,38 +44,3 @@
     <li>订单列表</li>
 </ul>
 <% end %>
-<!--     
-    <li class="order">
-        <table class="order-header order-bar-table">
-            <tr>
-                <td>下单日期</td>
-                <td rowspan="2"  class="order-bar-info-status"><strong>已完成</strong></td>
-                <td>总金额</td>
-            </tr>
-            <tr>
-                <td>2015-02-04</td>
-                <td><strong>￥250</strong></td>
-            </tr>
-        </table>
-        <table class="order-item-table">
-            <tr class="order-item">
-                <td>成都站 一楼一区</td>
-                <td>单价 ￥250</td>
-            </tr>
-            <tr class="order-item">
-                <td>成都站 一楼一区</td>
-                <td>单价 ￥250</td>
-            </tr>
-        </table>
-        <table class="order-footer order-bar-table">
-            <tr>
-                <td>
-                    <span class="order-bar-info-id">
-                        <div>订单编号: l3UmeTpjFw1qxt9l</div>
-                    </span>
-                </td>
-                <td><button class="button order-bar-detail-button">查看详情</button></td>
-            </tr>
-        </table>
-    </li>
-</ul> -->
