--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <title><%= content_for?(:title) ? yield(:title) : "My Application" %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "My Application" %>">
+    <title><%= content_for?(:title) ? yield(:title) : "Animenz 演奏会西南区" %></title>
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Animenz 演奏会西南区" %>">
     <%= stylesheet_link_tag 'normalize', 'data-turbolinks-track' => true %>
     <%= stylesheet_link_tag 'font-awesome', 'data-turbolinks-track' => true %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
