--- a/app/assets/stylesheets/animenz.scss
+++ b/app/assets/stylesheets/animenz.scss
@@ -113,7 +113,7 @@ html {
 	}
 
 	.index-pic-cont {
-		background-color: red;
+		// background-color: red;
         position: relative;
         overflow: hidden;
         @include user-select(none);
