--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -35,6 +35,7 @@
     再降50元 还抢20点券 截至目前爆售 三万台
 </div>
 
+<% content_for :header_class do %>continuous<% end %>
 <% content_for :breadcumb do %>
 <ul class="nav-bar float-left nav-breadcumb">
     <li><%= link_to '首页', '/' %></li>
