--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -53,6 +53,7 @@
     </div>
 </div>
 
+<% content_for :header_class do %>continuous<% end %>
 <% content_for :breadcumb do %>
 <ul class="nav-bar float-left">
     <li class="nav-bar-left-btn">选择场次</li>
