--- a/app/assets/stylesheets/area.scss
+++ b/app/assets/stylesheets/area.scss
@@ -17,13 +17,14 @@
         flex-direction: column;
         justify-content: center;
         padding: 1em 1em;
-        .area-list-item {
+        list-style: none;
+        li {
             @include mq($from: tablet) {
-                &:first-child {
-                    border-radius: 3px 3px 0 0; }
-                &:last-child {
-                    border-radius: 0 0 3px 3px; }
+                &:first-child { .area-list-item { border-radius: 3px 3px 0 0; } }
+                &:last-child { .area-list-item { border-radius: 0 0 3px 3px; } }
             }
+        }
+        .area-list-item {
             display: inline-block;
             padding: 1.2em 1.8em;
             border: 1px solid gray;
@@ -31,10 +32,9 @@
             background: $lighter-20;
             box-shadow: 1px 1px 5px $lighter-10 inset;
             text-shadow: 1px 0 0 #000;
-            margin: -1px 0;
-            @include mq($until: tablet) {
-                margin: -1px -1px;
-            }
+            // margin: -1px 0;
+            // @include mq($until: tablet) {
+            //     margin: -1px -1px; }
             &:hover {
                 background: $lighter-30;
             }
@@ -61,6 +61,5 @@
     }
     
     @include mq($until: tablet) {
-        flex-direction: column;
-    }
+        flex-direction: column; }
 }
