--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   <body>
     <div class="outer-container">
       <div class="page-container">
-          <header>
+          <header class="<%= yield(:header_class) %>">
             <%= render 'layouts/navigation' %>
           </header>
           <%= render 'layouts/messages' %>
