Profile page and flask message style update.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,4 +18,5 @@
 	<ul class="nav-bar float-right pos-relative nav-bar-profile-menu-cont">
 		<%= render 'layouts/nav_links_for_auth' %>
 	</ul>
+	<%= render 'layouts/messages' %>
 </div>
