--- a/app/assets/stylesheets/navheader.scss
+++ b/app/assets/stylesheets/navheader.scss
@@ -10,6 +10,7 @@ header {
     box-shadow: 2px 2px 2em black, -1px -1px 1px #333 inset, 1px 1px 1px #444 inset;
     position: relative;
     z-index: 10;
+    text-align: center;
 
     h1, h2 { display: inline-block; }
 
@@ -170,6 +171,55 @@ ul.nav-bar-profile-menu {
     }
     .nav-bar-profile-arrow:before {
         content: "\f106"; }
+}
+
+.nav-msg {
+    color: white;
+    padding: 0.6em 1em;
+    display: inline-block;
+    // background-color: $lighter-10;
+    // border-radius: 1.5em;
+    background: linear-gradient(to bottom, #222, #333);
+    border-left: 1px solid #222;
+    border-right: 1px solid #222;
+    box-shadow: 0 0 0 1px #444;
+    box-sizing: border-box;
+    text-shadow: 0 1px 0 black;
+
+    & > * {
+        display: inline-block;
+    }
+
+    @include media-mobile {
+        width: 100%; }
+
+    button {
+        padding: 0;
+        border-radius: 50%;
+        width: 1.5em;
+        height: 1.5em;
+        line-height: 0.5em;
+
+        // background-color: #222;
+        // text-shadow: 1px 1px 0 black;
+        // box-shadow: 1px 1px 1px black inset, -1px -1px 0 #282828 inset;
+        // border: 1px solid #444;
+
+        // color: #888;
+        // background: linear-gradient(0deg, $darken-5, $darken-20);
+        // box-shadow: 0px 1px 2px $darken-50;
+        // text-shadow: 0 1px 1px $darken-30;
+        // border: 1px solid #444;
+
+        background: linear-gradient(to bottom, $lighter-30, $lighter-50);
+        box-shadow: 0 1px 2px black, 0 -1px 0 $lighter-20 inset;
+        color: #222;
+        text-shadow: 0 1px 0 #999;
+        border: none;
+
+        @include media-mobile {
+            float: right; }
+    }
 }
 
 // dirty hack to expand the clickable
