--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,10 +30,12 @@
   <div>
     <p>若无需修改密码，请将此处置空。</p>
     <div class="form-group">
-      <%= f.password_field :password, :autocomplete => 'off', class: 'form-control', :placeholder => '输入新密码' %>
+      <%= f.label :name, '输入新密码' %>
+      <%= f.password_field :password, :autocomplete => 'off', class: 'form-control' %>
     </div>
     <div class="form-group">
-      <%= f.password_field :password_confirmation, class: 'form-control', :placeholder => '确认新密码' %>
+      <%= f.label :name, '确认新密码' %>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
     </div>
   </div>
 
@@ -41,7 +43,8 @@
 
   <p><strong>为确保安全，在提交之前请输入您当前的密码：</strong></p>
   <div class="form-group">
-  <%= f.password_field :current_password, class: 'form-control', :placeholder => '输入密码' %>
+    <%= f.label :name, '验证密码' %>
+    <%= f.password_field :current_password, class: 'form-control' %>
   </div>
   <br />
 
