--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,9 +1,9 @@
 <%# Rails flash messages styled for Bootstrap 3.0 %>
 <% flash.each do |name, msg| %>
   <% if msg.is_a?(String) %>
-    <div class="alert alert-<%= name.to_s == 'notice' ? 'success' : 'danger' %>">
-      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+    <div class="nav-msg nav-msg-<%= name.to_s == 'notice' ? 'success' : 'danger' %>">
       <%= content_tag :div, msg, :id => "flash_#{name}" %>
+      <button type="button" class="button" data-dismiss="alert" aria-hidden="true"><i class="fa fa-times"></i></button>
     </div>
   <% end %>
 <% end %>
