Use dynamic image resource in recital model

--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -1,6 +1,6 @@
  <div class="seat-main seat-layout-end clearfix no-padding">
     <div class="recital-poster-cont">
-        <%= image_tag 'poster.png', :class => 'recital-poster' %>
+        <%= image_tag @recital.poster.url, :class => 'recital-poster' %>
     </div>
     <div class="recital-detail-cont overflow-auto">
         <div class="recital-title font-bolder font-x-large">
