--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -13,7 +13,7 @@
             <h3>区域示意图</h3>
         </div>
         <div class="area-preview">
-            <%= image_tag 'area-map.jpg' %>
+            <%= image_tag @recital.venue_image %>
         </div>
     </div>
 </div>
